# wiki-pro

./: README.md  plan.md  pyproject.toml
src/wiki_pro/: cli.py  config.py  index.py  propose.py  query.py  read.py  render.py  spec.py
templates/: page.md  synthesis.md
templates/scaffold/: .wiki-pro.toml  example-note.md  index.md
tests/: test_query.py  test_read.py  test_spec.py
tests/fixtures/bad_wiki/: bare-header.md  broken-related.md  long-summary.md  missing-slug.md
tests/fixtures/good_wiki/: binary-search.md  hash-table.md  merge-sort.md
wiki/: .wiki-pro.toml  architecture-flat-over-nested.md  architecture-related-edges.md  architecture-tagging.md  authoring-anti-patterns.md  authoring-density.md  authoring-naming.md  authoring-synthesis-notes.md  index.md  llm-chunking-behaviour.md  llm-context-budget.md  llm-why-trees-dont-help.md  news-2026-rag-state.md  news-markdown-parser-updates.md  retrieval-header-ranking.md  retrieval-ripgrep-patterns.md  retrieval-when-to-embed.md  spec-chunking.md  spec-frontmatter.md  spec-headers.md  spec-linking.md  spec-summaries.md
