[project]
name = "wiki-pro"
version = "0.1.0"
description = "LLM-first wiki tooling"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "pyyaml>=6",
    "python-frontmatter>=1.1",
]

[project.scripts]
wiki = "wiki_pro.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wiki_pro"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
